tests/resource/valid/collection/tuple.mamba
def a := (a, b)
def b := ()
def (e, f) := (2, False)

def a := (a, b)
def b := ()
def (e, f) := (2, True)
