tests/resource/invalid/type/definition/tuple_assign_itself.mamba
def b := ()
def a := (a, b)
